...
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U6L-Zf-f9A">
                                                <rect key="frame" x="8" y="8" width="64" height="48"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="48" id="ifo-AL-yYD"/>
                                                </constraints>
                                                <state key="normal" title="Back" image="back">
                                                    <color key="titleColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="goBack:" destination="fYj-Lg-za3" eventType="touchUpInside" id="EFf-Zc-QeZ"/>
                                                </connections>
                                            </button>
...
                                <rect key="frame" x="0.0" y="562" width="375" height="56"/>
                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="56" id="VaX-0Q-47E"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Buy">
                                    <color key="titleColor" red="0.96470588239999999" green="0.97254901959999995" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="IjV-SR-E35" kind="show" identifier="buySegue" id="bF8-8K-XGG"/>
                                </connections>
                            </button>
...
